--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -12,7 +12,7 @@
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-          <li>{{#linkTo "index"}}Home{{/linkTo}}</li>
+          <li>{{#linkTo "index"}}Profile{{/linkTo}}</li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Competitions <b class="caret"></b></a>
             <ul class="dropdown-menu">
@@ -29,21 +29,16 @@
               <li class="dropdown-header">Challenges</li>
               <li>{{#linkTo "teamCompetitions"}}Leaderboard{{/linkTo}}</li> 
               <li class="divider"></li>
-              <li>{{#linkTo "competitions"}}Individual Challenges{{/linkTo}}</li>
-              <li>{{#linkTo "teamCompetitions"}}Team Challenges{{/linkTo}}</li>              
+              <li>{{#linkTo "challenges"}}Individual Challenges{{/linkTo}}</li>
+              <li>{{#linkTo "teamChallenges"}}Team Challenges{{/linkTo}}</li>              
             </ul>
-          </li>
-          <li>{{#linkTo "competitions"}}Contact{{/linkTo}}</li>          
+          </li>                    
         </ul>
-        <form class="navbar-form navbar-right">
-          <div class="form-group">
-            <input type="text" placeholder="Email" class="form-control">
-          </div>
-          <div class="form-group">
-            <input type="password" placeholder="Password" class="form-control">
-          </div>
-          <button type="submit" class="btn btn-success">Sign in</button>
-        </form>
+        <ul class="nav navbar-nav navbar-right">
+          <li>{{#linkTo "contact"}}Contact us{{/linkTo}}</li>
+          <li>{{#linkTo "index"}}Settings{{/linkTo}}</li>
+          <li><a href="../navbar-static-top/">Sign out</a></li>
+        </ul>
       </div><!--/.nav-collapse -->
     </div>
   </div>
