--- a/app/assets/javascripts/templates/contact.hbs
+++ b/app/assets/javascripts/templates/contact.hbs
@@ -1,8 +1,8 @@
 <!-- Main jumbotron for a primary marketing message or call to action -->
 <div class="jumbotron">
   <div class="container">
-    <h1>Welcome to Workout Wars</h1>
-    <p>Are you ready to push your body to the max?</p>
+    <h1>Contact Us</h1>
+    <p>We would love to hear feedback</p>
   </div>
 </div>
 
