--- a/app/assets/javascripts/templates/challenges.hbs
+++ b/app/assets/javascripts/templates/challenges.hbs
@@ -1,17 +1,17 @@
-<div class="jumbotron">
-  <h1>Challenges</h1>
-  <p>Enter the relm of challenges to compete against yourself.</p>
-  <p>
-    <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">View navbar docs &raquo;</a>
-  </p>
+<h1>Challenges</h1>
+<hr>
+<div class="row">
+  <div class="col-md-3">
+    {{#linkTo "challenges.create" class="btn btn-success btn-block"}}New Challenge{{/linkTo}}
+    <ul class="nav nav-pills nav-stacked">
+    {{#each controller}}
+      <li>{{#linkTo "challenge" this}}{{name}}{{/linkTo}}</li>
+    {{else}}
+      <li>There are no challenges.</li>
+    {{/each}}
+    </ul>
+  </div>
+  <div class="col-md-9">
+    {{outlet}}
+  </div>
 </div>
-
-<ul>
-  {{#each controller}}
-    <li>{{#linkTo "competition" this}}{{name}}{{/linkTo}}</li>
-  {{else}}
-    <li>There are no competitions.</li>
-  {{/each}}
-</ul>
-
-{{outlet}}
