--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -1,51 +1,61 @@
 <!-- Fixed navbar -->
-  <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        {{#linkTo "index" classNames="navbar-brand"}}WorkoutWars{{/linkTo}}
-      </div>
-      <div class="navbar-collapse collapse">
-        <ul class="nav navbar-nav">
-          <li>{{#linkTo "index"}}Profile{{/linkTo}}</li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Competitions <b class="caret"></b></a>
-            <ul class="dropdown-menu">
-              <li class="dropdown-header">Competitions</li>
-              <li>{{#linkTo "teamCompetitions"}}Leaderboard{{/linkTo}}</li> 
-              <li class="divider"></li>
-              <li>{{#linkTo "competitions"}}Individual Competitions{{/linkTo}}</li>
-              <li>{{#linkTo "teamCompetitions"}}Team Competitions{{/linkTo}}</li>              
-            </ul>
-          </li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Challenges <b class="caret"></b></a>
-            <ul class="dropdown-menu">
-              <li class="dropdown-header">Challenges</li>
-              <li>{{#linkTo "teamCompetitions"}}Leaderboard{{/linkTo}}</li> 
-              <li class="divider"></li>
-              <li>{{#linkTo "challenges"}}Individual Challenges{{/linkTo}}</li>
-              <li>{{#linkTo "teamChallenges"}}Team Challenges{{/linkTo}}</li>              
-            </ul>
-          </li>                    
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-          <li>{{#linkTo "contact"}}Contact us{{/linkTo}}</li>
-          <li>{{#linkTo "index"}}Settings{{/linkTo}}</li>
-          <li><a href="../navbar-static-top/">Sign out</a></li>
-        </ul>
-      </div><!--/.nav-collapse -->
+<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      {{#linkTo "index" classNames="navbar-brand"}}WorkoutWars{{/linkTo}}
     </div>
+    <div class="navbar-collapse collapse">
+      <ul class="nav navbar-nav">
+        <li>{{#linkTo "index"}}Profile{{/linkTo}}</li>
+        <li>{{#linkTo "users"}}Users{{/linkTo}}</li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Competitions <b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li>{{#linkTo "team_competitions"}}Leaderboard{{/linkTo}}</li> 
+            <li class="divider"></li>
+            <li>{{#linkTo "competitions"}}Individual Competitions{{/linkTo}}</li>
+            <li>{{#linkTo "team_competitions"}}Team Competitions{{/linkTo}}</li>              
+          </ul>
+        </li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Challenges <b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li>{{#linkTo "team_competitions"}}Leaderboard{{/linkTo}}</li> 
+            <li class="divider"></li>
+            <li>{{#linkTo "challenges"}}Individual Challenges{{/linkTo}}</li>
+            <li>{{#linkTo "team_challenges"}}Team Challenges{{/linkTo}}</li>              
+          </ul>
+        </li>                    
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li>{{#linkTo "contact"}}Contact us{{/linkTo}}</li>
+        <li>{{#linkTo "index"}}Settings{{/linkTo}}</li>
+        <li><a href="/users/sign_out">Sign out</a></li>
+      </ul>
+    </div><!--/.nav-collapse -->
   </div>
+</div>
 
-    <div class="container">
-      <br />
-      <br />
-      <br />
-      {{outlet}}
-    </div> <!-- /container -->
+<div class="container">
+  <br />
+  <br />
+  <br />
+  {{outlet}}
+  <br />
+  <br />
+  <br />
+</div> <!-- /container -->
+
+<!-- FOOTER -->
+<footer>
+  <nav class="navbar navbar-default navbar-bottom" role="navigation">
+    <br />
+    <p class="text-center">&copy; 2013 Senior Project for Cody Tanner, Joey Gibson, John Hanks, and Charmaine Keck &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+  </nav>
+</footer>
