--- a/app/assets/javascripts/templates/team_challenge.hbs
+++ b/app/assets/javascripts/templates/team_challenge.hbs
@@ -1,7 +1,20 @@
-<h1>{{name}}</h1>
+<button class="btn btn-danger"{{action "delete"}}>Delete</button>
+<button class="btn btn-default"{{action "edit"}}>Edit</button>
 
-<p>{{startDate}}</p>
-<p>{{endDate}}</p>
-<p>{{maxParticipants}}</p>
-<p>{{lowerLevelRestriction}}</p>
-<p>{{upperLevelRestriction}}</p>
+{{#if deleteMode}}
+<div class="confirm-box">
+  <h4>Are you sure?</h4>
+  <button class="btn btn-danger"{{action "confirmDelete"}}> Yes </button>
+  <button class="btn btn-default"{{action "cancelDelete"}}> No </button>
+</div>
+{{/if}}
+
+<h2>Name: {{name}}</h2>
+
+<p>Start Date: {{startDate}}</p>
+<p>End Date: {{endDate}}</p>
+<p>Max Participants: {{maxParticipants}}</p>
+<p>Lower Level Restriction: {{lowerLevelRestriction}}</p>
+<p>Upper Level Restriction: {{upperLevelRestriction}}</p>
+<br />
+{{outlet}}
