--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -17,19 +17,19 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Competitions <b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li>{{#linkTo "team_competitions"}}Leaderboard{{/linkTo}}</li> 
+            <li>{{#linkTo "teamCompetitions"}}Leaderboard{{/linkTo}}</li> 
             <li class="divider"></li>
             <li>{{#linkTo "competitions"}}Individual Competitions{{/linkTo}}</li>
-            <li>{{#linkTo "team_competitions"}}Team Competitions{{/linkTo}}</li>              
+            <li>{{#linkTo "teamCompetitions"}}Team Competitions{{/linkTo}}</li>              
           </ul>
         </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Challenges <b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li>{{#linkTo "team_competitions"}}Leaderboard{{/linkTo}}</li> 
+            <li>{{#linkTo "teamCompetitions"}}Leaderboard{{/linkTo}}</li> 
             <li class="divider"></li>
             <li>{{#linkTo "challenges"}}Individual Challenges{{/linkTo}}</li>
-            <li>{{#linkTo "team_challenges"}}Team Challenges{{/linkTo}}</li>              
+            <li>{{#linkTo "teamChallenges"}}Team Challenges{{/linkTo}}</li>              
           </ul>
         </li>                    
       </ul>
