--- a/app/assets/javascripts/templates/competition.hbs
+++ b/app/assets/javascripts/templates/competition.hbs
@@ -16,5 +16,8 @@
 <p>Max Participants: {{maxParticipants}}</p>
 <p>Lower Level Restriction: {{lowerLevelRestriction}}</p>
 <p>Upper Level Restriction: {{upperLevelRestriction}}</p>
+<p>Public: {{public}}</p>
+<p>Active: {{active}}</p>
+<p>Reward: {{reward}}</p>
 <br />
 {{outlet}}
