--- a/app/assets/javascripts/templates/competition/edit.hbs
+++ b/app/assets/javascripts/templates/competition/edit.hbs
@@ -1,52 +1,70 @@
-<div class="competition-edit">
-  <h4>Competition Settings</h4>
-  <hr>
+<h4>Competition Settings</h4>
+<hr>
+<div class="row competition-edit">
   <div class="form-group">
-    <label class= "col-sm-2 control-label">Name</label>
-    <div class="col-sm-10">
+    <label class= "col-sm-3 control-label">Name</label>
+    <div class="col-sm-9">
       {{input value=name classNames="form-control"}}
     </div>
   </div>
   <br />
   <div class="form-group">
-    <label class= "col-sm-2 control-label">Start Date</label>
-    <div class="col-sm-10">
+    <label class= "col-sm-3 control-label">Start Date</label>
+    <div class="col-sm-9">
       {{input value=startDate classNames="form-control date-field"}}
     </div>
   </div>
 
   <div class="form-group">
-    <label class= "col-sm-2 control-label">End Date</label>
-    <div class="col-sm-10">
+    <label class= "col-sm-3 control-label">End Date</label>
+    <div class="col-sm-9">
       {{input value=endDate classNames="form-control date-field"}}
     </div>
   </div>
 
   <div class="form-group">
-    <label class= "col-sm-2 control-label">Lower Level Restriction</label>
-    <div class="col-sm-10">
+    <label class= "col-sm-3 control-label">Lower Level Restriction</label>
+    <div class="col-sm-9">
       {{input value=lowerLevelRestriction classNames="form-control"}}
     </div>
   </div>
 
   <div class="form-group">
-    <label class= "col-sm-2 control-label">Upper Level Restriction</label>
-    <div class="col-sm-10">
+    <label class= "col-sm-3 control-label">Upper Level Restriction</label>
+    <div class="col-sm-9">
       {{input value=upperLevelRestriction classNames="form-control"}}
     </div>
   </div>
 
   <div class="form-group">
-    <label class= "col-sm-2 control-label">Max Participants</label>
-    <div class="col-sm-10">
+    <label class= "col-sm-3 control-label">Max Participants</label>
+    <div class="col-sm-9">
       {{input value=maxParticipants classNames="form-control"}}
     </div>
   </div>
 
-  <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <input {{action "save"}} type="submit" class="btn btn-lg btn-block btn-success" value="Save" />
+<div class="form-group">
+  <div class= "col-sm-3"></div> 
+    <div class="col-sm-9"> 
+      <div class="radio">
+        <label>
+          <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked>
+          Public
+        </label>
+      </div>
+      <div class="radio">
+        <label>
+          <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
+          Private
+        </label>
+      </div>
     </div>
   </div>
 </div>
-<div class="clearfix"></div>
+
+  <div class="form-group">
+    <div class="col-sm-offset-3 col-sm-9">
+      <input {{action "saveCompetition"}} type="submit" class="btn btn-lg btn-block btn-success" value="Save" />
+    </div>
+  </div>
+</div>
