--- a/app/assets/javascripts/templates/team_challenge/edit.hbs
+++ b/app/assets/javascripts/templates/team_challenge/edit.hbs
@@ -1,6 +1,6 @@
-<h4>Challenge Settings</h4>
+<h4>Team Challenge Settings</h4>
 <hr>
-<div class="row challenge-edit">
+<div class="row team-challenge-edit">
   <div class="form-group">
     <label class= "col-sm-3 control-label">Name</label>
     <div class="col-sm-9">
@@ -45,7 +45,7 @@
 
   <div class="form-group">
     <div class="col-sm-offset-3 col-sm-9">
-      <input {{action "saveChallenge"}} type="submit" class="btn btn-lg btn-block btn-success" value="Save" />
+      <input {{action "saveTeamChallenge"}} type="submit" class="btn btn-lg btn-block btn-success" value="Save" />
     </div>
   </div>
 </div>
