--- a/app/assets/javascripts/templates/user/edit.hbs
+++ b/app/assets/javascripts/templates/user/edit.hbs
@@ -43,7 +43,7 @@
 
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <input {{action "save"}} type="submit" class="btn btn-lg btn-block btn-success" value="Save" />
+      <input {{action "saveUser"}} type="submit" class="btn btn-lg btn-block btn-success" value="Save" />
     </div>
   </div>
 </div>
