--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 </head>
 <body>
 <% if user_signed_in? %>
+  <meta name="current-user" content="<%= UserSerializer.new(current_user).to_json(root: false) %>" />
   <%= yield %>
 <% else %>
   <div class="container">  
