--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><%= link_to "Home", root_path %></li>
+            <li><%= link_to "Home", unauthenticated_root_path %></li>
             <li><%= link_to "Sign In", new_user_session_path %></li>
             <li><%= link_to "Sign up", new_user_registration_path %></li>
           </ul>
