--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -12,13 +12,11 @@
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li>{{#linkTo "user.exercises" currentUser}}Profile{{/linkTo}}</li>
+        <li>{{#linkTo "user" currentUser}}Profile{{/linkTo}}</li>
         <li>{{#linkTo "users"}}Users{{/linkTo}}</li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Competitions <b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li>{{#linkTo "teamCompetitions"}}Leaderboard{{/linkTo}}</li> 
-            <li class="divider"></li>
             <li>{{#linkTo "competitions"}}Individual Competitions{{/linkTo}}</li>
             <li>{{#linkTo "teamCompetitions"}}Team Competitions{{/linkTo}}</li>              
           </ul>
@@ -26,8 +24,6 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Challenges <b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li>{{#linkTo "teamCompetitions"}}Leaderboard{{/linkTo}}</li> 
-            <li class="divider"></li>
             <li>{{#linkTo "challenges"}}Individual Challenges{{/linkTo}}</li>
             <li>{{#linkTo "teamChallenges"}}Team Challenges{{/linkTo}}</li>              
           </ul>
