--- a/app/assets/javascripts/templates/user.hbs
+++ b/app/assets/javascripts/templates/user.hbs
@@ -3,7 +3,7 @@
 
   <div class="col-md-10">
     <ul class="nav nav-pills">
-      <li>{{#linkTo "user.exercises"}}Exercises{{/linkTo}}</li>
+      <li>Activities</li>
       <li>{{#linkTo "user.stats"}}Stats{{/linkTo}}</li>
       <li>{{#linkTo "user.competitions"}}Competitions{{/linkTo}}</li>
       <li>{{#linkTo "user.teamCompetitions"}}Team Competitions{{/linkTo}}</li>
