--- a/app/assets/javascripts/templates/user.hbs
+++ b/app/assets/javascripts/templates/user.hbs
@@ -1,9 +1,8 @@
 <div class="row">
   <h1>{{email}}</h1>
-
   <div class="col-md-10">
     <ul class="nav nav-pills">
-      <li>{{#linkTo "activities" this}}Activities{{/linkTo}}</li>
+      <li>{{#linkTo "activities"}}Activities{{/linkTo}}</li>
       <li>{{#linkTo "user.stats"}}Stats{{/linkTo}}</li>
       <li>{{#linkTo "user.competitions"}}Competitions{{/linkTo}}</li>
       <li>{{#linkTo "user.teamCompetitions"}}Team Competitions{{/linkTo}}</li>
