add exercises to app controller

--- a/app/assets/javascripts/templates/user/stats.hbs
+++ b/app/assets/javascripts/templates/user/stats.hbs
@@ -1,1 +1,13 @@
 <h3>Stats</h3>
+<div class="row">
+  <div class="col-md-10">
+    todo
+  </div>
+  <div class="col-md-2">
+    <p>Name: {{name}}</p>
+    <p>Nickname: {{nickname}}</p>
+    <p>Age: {{age}}</p>
+    <p>Height: {{height}}</p>
+    <p>Weight: {{weight}}</p>
+  </div>
+</div>
