--- a/app/assets/javascripts/templates/challenge/edit.hbs
+++ b/app/assets/javascripts/templates/challenge/edit.hbs
@@ -1,51 +1,90 @@
-<h4>Challenge Settings</h4>
-<hr>
-<div class="row challenge-edit">
-  <div class="form-group">
-    <label class= "col-sm-3 control-label">Name</label>
-    <div class="col-sm-9">
-      {{input value=name classNames="form-control"}}
+<div class="row">
+  <div class="col-md-10">
+    <h3>Challenge Settings</h3>
+    <hr>
+    <div class="row">
+      <div class="form-group">
+        <label class= "col-sm-3 control-label">Name</label>
+        <div class="col-sm-9">
+          {{input value=name classNames="form-control"}}
+        </div>
+      </div>
     </div>
-  </div>
-  <br />
-  <div class="form-group">
-    <label class= "col-sm-3 control-label">Start Date</label>
-    <div class="col-sm-9">
-      {{input value=startDate classNames="form-control date-field"}}
+
+    <div class="row">
+      <div class="form-group">
+        <label class= "col-sm-3 control-label">Start Date</label>
+        <div class="col-sm-9">
+          {{input value=startDate classNames="form-control date-field"}}
+        </div>
+      </div>
     </div>
+
+    <div class="row">
+      <div class="form-group">
+        <label class= "col-sm-3 control-label">End Date</label>
+        <div class="col-sm-9">
+          {{input value=endDate classNames="form-control date-field"}}
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="form-group">
+        <label class= "col-sm-3 control-label">Lower Level Restriction</label>
+        <div class="col-sm-9">
+          {{input value=lowerLevelRestriction classNames="form-control"}}
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="form-group">
+        <label class= "col-sm-3 control-label">Upper Level Restriction</label>
+        <div class="col-sm-9">
+          {{input value=upperLevelRestriction classNames="form-control"}}
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="form-group">
+        <label class= "col-sm-3 control-label">Max Participants</label>
+        <div class="col-sm-9">
+          {{input value=maxParticipants classNames="form-control"}}
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="form-group">
+        <label class= "col-sm-3 control-label">Public</label>
+        <div class="col-sm-9">
+          <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="form-group">
+        <label class= "col-sm-3 control-label">Private</label>
+        <div class="col-sm-9">
+          <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="form-group">
+        <div class="col-sm-offset-3 col-sm-9">
+          <input {{action "saveCompetition"}} type="submit" class="btn btn-lg btn-success" value="Save" />
+        </div>
+      </div>
+    </div>
+
   </div>
 
-  <div class="form-group">
-    <label class= "col-sm-3 control-label">End Date</label>
-    <div class="col-sm-9">
-      {{input value=endDate classNames="form-control date-field"}}
-    </div>
-  </div>
-
-  <div class="form-group">
-    <label class= "col-sm-3 control-label">Lower Level Restriction</label>
-    <div class="col-sm-9">
-      {{input value=lowerLevelRestriction classNames="form-control"}}
-    </div>
-  </div>
-
-  <div class="form-group">
-    <label class= "col-sm-3 control-label">Upper Level Restriction</label>
-    <div class="col-sm-9">
-      {{input value=upperLevelRestriction classNames="form-control"}}
-    </div>
-  </div>
-
-  <div class="form-group">
-    <label class= "col-sm-3 control-label">Max Participants</label>
-    <div class="col-sm-9">
-      {{input value=maxParticipants classNames="form-control"}}
-    </div>
-  </div>
-
-  <div class="form-group">
-    <div class="col-sm-offset-3 col-sm-9">
-      <input {{action "saveChallenge"}} type="submit" class="btn btn-lg btn-block btn-success" value="Save" />
-    </div>
+  <div class="col-md-2">
+    {{render "exercises"}}
   </div>
 </div>
