--- a/app/assets/javascripts/templates/competition.hbs
+++ b/app/assets/javascripts/templates/competition.hbs
@@ -9,15 +9,29 @@
 </div>
 {{/if}}
 
-<h2>Name: {{name}}</h2>
+<div class="row">
+  <div class="col-md-10">
+    <h2>{{name}}</h2>
+    <p>Start Date: {{startDate}}</p>
+    <p>End Date: {{endDate}}</p>
+    <p>Max Participants: {{maxParticipants}}</p>
+    <p>Lower Level Restriction: {{lowerLevelRestriction}}</p>
+    <p>Upper Level Restriction: {{upperLevelRestriction}}</p>
+    <p>Public: {{public}}</p>
+    <p>Active: {{active}}</p>
+    <p>Reward: {{reward}}</p>
+    <br />
+  </div>
 
-<p>Start Date: {{startDate}}</p>
-<p>End Date: {{endDate}}</p>
-<p>Max Participants: {{maxParticipants}}</p>
-<p>Lower Level Restriction: {{lowerLevelRestriction}}</p>
-<p>Upper Level Restriction: {{upperLevelRestriction}}</p>
-<p>Public: {{public}}</p>
-<p>Active: {{active}}</p>
-<p>Reward: {{reward}}</p>
-<br />
+  <div class="col-md-2">
+    <ul>
+    {{#each controller.exercises}}
+      <li>{{name}}</li>
+    {{/each}}
+    </ul>
+  </div>
+</div>
+
+<hr class="featurette-divider">
+
 {{outlet}}
