--- a/app/assets/javascripts/templates/competition/edit.hbs
+++ b/app/assets/javascripts/templates/competition/edit.hbs
@@ -1,72 +1,93 @@
-<h4>Competition Settings</h4>
-<hr>
-<div class="row competition-edit">
-  <div class="form-group">
-    <label class= "col-sm-3 control-label">Name</label>
-    <div class="col-sm-9">
-      {{input value=name classNames="form-control"}}
+<div class="row">
+  <div class="col-md-10">
+    <h4>Competition Settings</h4>
+    <hr>
+    <div class="row">
+      <div class="form-group">
+        <label class= "col-sm-4 control-label">Name</label>
+        <div class="col-sm-8">
+          {{input value=name classNames="form-control"}}
+        </div>
+      </div>
     </div>
-  </div>
-  <br />
-  <div class="form-group">
-    <label class= "col-sm-3 control-label">Start Date</label>
-    <div class="col-sm-9">
-      {{input value=startDate classNames="form-control date-field"}}
-    </div>
-  </div>
 
-  <div class="form-group">
-    <label class= "col-sm-3 control-label">End Date</label>
-    <div class="col-sm-9">
-      {{input value=endDate classNames="form-control date-field"}}
+    <div class="row">
+      <div class="form-group">
+        <label class= "col-sm-4 control-label">Start Date</label>
+        <div class="col-sm-8">
+          {{input value=startDate classNames="form-control date-field"}}
+        </div>
+      </div>
     </div>
-  </div>
 
-  <div class="form-group">
-    <label class= "col-sm-3 control-label">Lower Level Restriction</label>
-    <div class="col-sm-9">
-      {{input value=lowerLevelRestriction classNames="form-control"}}
+    <div class="row">
+      <div class="form-group">
+        <label class= "col-sm-4 control-label">End Date</label>
+        <div class="col-sm-8">
+          {{input value=endDate classNames="form-control date-field"}}
+        </div>
+      </div>
     </div>
-  </div>
 
-  <div class="form-group">
-    <label class= "col-sm-3 control-label">Upper Level Restriction</label>
-    <div class="col-sm-9">
-      {{input value=upperLevelRestriction classNames="form-control"}}
+    <div class="row">
+      <div class="form-group">
+        <label class= "col-sm-4 control-label">Lower Level Restriction</label>
+        <div class="col-sm-8">
+          {{input value=lowerLevelRestriction classNames="form-control"}}
+        </div>
+      </div>
     </div>
-  </div>
 
-  <div class="form-group">
-    <label class= "col-sm-3 control-label">Max Participants</label>
-    <div class="col-sm-9">
-      {{input value=maxParticipants classNames="form-control"}}
+    <div class="row">
+      <div class="form-group">
+        <label class= "col-sm-4 control-label">Upper Level Restriction</label>
+        <div class="col-sm-8">
+          {{input value=upperLevelRestriction classNames="form-control"}}
+        </div>
+      </div>
     </div>
-  </div>
 
-<div class="form-group">
-  <div class= "col-sm-3"></div> 
-    <div class="col-sm-9"> 
-      <div class="radio">
-        <label>
+    <div class="row">
+      <div class="form-group">
+        <label class= "col-sm-4 control-label">Max Participants</label>
+        <div class="col-sm-8">
+          {{input value=maxParticipants classNames="form-control"}}
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="form-group">
+        <label class= "col-sm-4 control-label">Public</label>
+        <div class="col-sm-8">
           <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked>
-          Public
-        </label>
-      </div>
-      <div class="radio">
-        <label>
-          <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
-          Private
-        </label>
+        </div>
       </div>
     </div>
-  </div>
-</div>
 
-  <div class="form-group">
-    <div class="col-sm-offset-3 col-sm-9">
-      <input {{action "saveCompetition"}} type="submit" class="btn btn-lg btn-block btn-success" value="Save" />
+    <div class="row">
+      <div class="form-group">
+        <label class= "col-sm-4 control-label">Private</label>
+        <div class="col-sm-8">
+          <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked>
+        </div>
+      </div>
     </div>
+
+    <div class="row">
+      <div class="form-group">
+        <div class="col-sm-offset-4 col-sm-8">
+          <input {{action "saveCompetition"}} type="submit" class="btn btn-lg btn-block btn-success" value="Save" />
+        </div>
+        <div class="col-sm-offset-4 col-sm-8">
+          <input {{action "cancelSave"}} type="submit" class="btn btn-lg btn-block btn-info" value="Cancel" />
+        </div>        
+      </div>
+    </div>
+
+  </div>
+
+  <div class="col-md-2">
+    {{render "exercises"}}
   </div>
 </div>
-
-{{render "exercises"}}
