adds date helper

--- a/app/assets/javascripts/templates/competition.hbs
+++ b/app/assets/javascripts/templates/competition.hbs
@@ -12,8 +12,8 @@
 <div class="row">
   <div class="col-md-10">
     <h2>{{name}}</h2>
-    <p>Start Date: {{startDate}}</p>
-    <p>End Date: {{endDate}}</p>
+    <p>Start Date: {{date startDate}}</p>
+    <p>End Date: {{date endDate}}</p>
     <p>Max Participants: {{maxParticipants}}</p>
     <p>Lower Level Restriction: {{lowerLevelRestriction}}</p>
     <p>Upper Level Restriction: {{upperLevelRestriction}}</p>
@@ -35,3 +35,4 @@
 <hr class="featurette-divider">
 
 {{outlet}}
+
