first attempt at date picker

--- a/app/assets/javascripts/templates/competition.hbs
+++ b/app/assets/javascripts/templates/competition.hbs
@@ -17,7 +17,7 @@
     <p>Max Participants: {{maxParticipants}}</p>
     <p>Lower Level Restriction: {{lowerLevelRestriction}}</p>
     <p>Upper Level Restriction: {{upperLevelRestriction}}</p>
-    <p>Public: {{public}}</p>
+    <p>Public: {{isPublic}}</p>
     <p>Active: {{active}}</p>
     <p>Reward: {{reward}}</p>
     <br />
