--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,9 @@
  *
  *= require_self
  *= require jquery.ui.all
+ *= require default
+ *= require default.date
+ *= require default.time
  *= require_tree .
  */
 
