--- a/app/assets/javascripts/templates/activities.hbs
+++ b/app/assets/javascripts/templates/activities.hbs
@@ -1,4 +1,5 @@
 <h1>Activities</h1>
+{{controller}}
 {{#linkTo "activities.create" class="btn btn-lg btn-success btn-block"}}New Activity{{/linkTo}}
 <hr>
 <div class="row">
