--- a/app/assets/javascripts/templates/competition.hbs
+++ b/app/assets/javascripts/templates/competition.hbs
@@ -1,4 +1,4 @@
-<button class="btn btn-danger"{{action "delete"}}>Delete</button>
+<button class="btn btn-danger"{{action "activateDelete"}}>Delete</button>
 <button class="btn btn-default"{{action "edit"}}>Edit</button>
 
 {{#if deleteMode}}
