fixes competition delete

--- a/app/assets/javascripts/templates/competition.hbs
+++ b/app/assets/javascripts/templates/competition.hbs
@@ -1,3 +1,5 @@
+{{controller}}
+{{deleteMode}}
 <button class="btn btn-danger"{{action "activateDelete"}}>Delete</button>
 <button class="btn btn-default"{{action "edit"}}>Edit</button>
 
