--- a/app/assets/javascripts/templates/competition/edit.hbs
+++ b/app/assets/javascripts/templates/competition/edit.hbs
@@ -3,11 +3,11 @@
     <h4>Competition Settings</h4>
     <hr>
     <div class="row">
-      <div {{bindAttr class=":form-group nameIsValid::has-error"}}>
+      <div {{bindAttr class=":form-group isValid::has-error"}}>
         <label class= "col-sm-4 control-label">Name</label>
         <div class="col-sm-8">
-          {{input value=nameInput classNames="form-control"}}
-          {{#unless nameIsValid}}
+          {{input value=name classNames="form-control"}}
+          {{#unless isValid}}
             <p class="text-danger text-center">{{errors}}</p>
           {{/unless}}
         </div>
