adds user to activities create

--- a/app/assets/javascripts/templates/activity/edit.hbs
+++ b/app/assets/javascripts/templates/activity/edit.hbs
@@ -11,14 +11,14 @@
   <div class="form-group">
     <label class= "col-sm-3 control-label">Distance</label>
     <div class="col-sm-9">
-      {{input value=distance classNames="form-control date-field"}}
+      {{input value=distance classNames="form-control"}}
     </div>
   </div>
 
   <div class="form-group">
     <label class= "col-sm-3 control-label">Duration</label>
     <div class="col-sm-9">
-      {{input value=duration classNames="form-control date-field"}}
+      {{input value=duration classNames="form-control"}}
     </div>
   </div>
 
