update to ember-data and begins to handle exercises

--- a/app/assets/javascripts/templates/activity/edit.hbs
+++ b/app/assets/javascripts/templates/activity/edit.hbs
@@ -1,5 +1,6 @@
 <h4>Activity Settings</h4>
 <hr>
+{{render "exercises"}}
 <div class="row activity-edit">
   <div class="form-group">
     <label class= "col-sm-3 control-label">Reps</label>
