--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -18,16 +18,16 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Competitions <b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li>{{#linkTo "competitions"}}Individual Competitions{{/linkTo}}</li>
-            <li>{{#linkTo "teamCompetitions"}}Team Competitions{{/linkTo}}</li>              
+            {{!-- <li>{{#linkTo "teamCompetitions"}}Team Competitions{{/linkTo}}</li>  --}}             
           </ul>
         </li>
-        <li class="dropdown">
+       {{!--  <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Challenges <b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li>{{#linkTo "challenges"}}Individual Challenges{{/linkTo}}</li>
             <li>{{#linkTo "teamChallenges"}}Team Challenges{{/linkTo}}</li>              
           </ul>
-        </li>                    
+        </li>  --}}                   
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>{{#linkTo "contact"}}Contact us{{/linkTo}}</li>
