--- a/app/assets/javascripts/templates/competition.hbs
+++ b/app/assets/javascripts/templates/competition.hbs
@@ -1,5 +1,3 @@
-{{controller}}
-{{deleteMode}}
 <button class="btn btn-danger"{{action "activateDelete"}}>Delete</button>
 <button class="btn btn-default"{{action "edit"}}>Edit</button>
 
@@ -33,7 +31,14 @@
     </ul>
   </div>
 </div>
-
+<div>
+  <h4>event e </h4>
+  <ul>
+  {{#each controller.eventExercises}}
+    <li>{{id}}</li>
+  {{/each}}
+  </ul>
+</div>
 <hr class="featurette-divider">
 
 {{outlet}}
