adds ability to add exercises to competition

--- a/app/assets/javascripts/templates/competition.hbs
+++ b/app/assets/javascripts/templates/competition.hbs
@@ -32,10 +32,10 @@
   </div>
 </div>
 <div>
-  <h4>event e </h4>
+  <h4>Exercises for this Competition </h4>
   <ul>
-  {{#each controller.eventExercises}}
-    <li>{{id}}</li>
+  {{#each controller.Exercises}}
+    <li>{{name}}</li>
   {{/each}}
   </ul>
 </div>
