updates to ember-data 1.0.0 beta 3

--- a/app/assets/javascripts/templates/competition.hbs
+++ b/app/assets/javascripts/templates/competition.hbs
@@ -34,7 +34,7 @@
 <div>
   <h4>Exercises for this Competition </h4>
   <ul>
-  {{#each controller.Exercises}}
+  {{#each controller.eventExercises}}
     <li>{{name}}</li>
   {{/each}}
   </ul>
