--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -23,7 +23,7 @@
         <div class="container">
           <div class="carousel-caption">
             <h1>Never skip a workout again</h1>
-            <p>Using idea from the latest scientific studies, we have found a way to help motivate people to workout at a higher level.</p>
+            <p>Using ideas from the latest scientific studies, we have found a way to help motivate people to workout at a higher level.</p>
             <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
           </div>
         </div>
@@ -57,19 +57,19 @@
           <% image_size = 325 %>
           <%= image_tag "medium-home1.jpg", height: image_size, width: image_size, alt: "Generic Image", class: "img-circle" %>
           <h2>Competitions</h2>
-          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+          <p>Nothing pushes you harder than a friendly competition. Here is where you can join a public competition and compete with other users on the site or start your own private competition and challenge your friends in the exercise(s) of your choice.</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <%= image_tag "medium-home2.jpg", height: image_size, width: image_size, alt: "Generic Image", class: "img-circle" %>
           <h2>Challenges</h2>
-          <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+          <p>Come see what your made of. Challenge yourself in these individual exercise challenges. How many pushups can you do in a minute? See where you stack up against other users in your fitness level and compare where you against the entire site average.</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <%= image_tag "medium-home3.jpg", height: image_size, width: image_size, alt: "Generic Image", class: "img-circle" %>
           <h2>Teams</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+          <p>Ready to take it to the next level? Form a team and join a team competition where each team members progess is counted toward your team score. Work with your friends to dominate your opponents. Work hard and emerge victorious!</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
@@ -81,8 +81,8 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">Get the results you want. <span class="text-muted">It'll blow your mind.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">Get the results you want. <span class="text-muted"> Compete to Win.</span></h2>
+          <p class="lead">Get fit while having fun competing with your friends and challenging yourself to achieve new levels of fitness. Whatever your fitness goals are the key to achieving results is consistency. We keep you motivated by using your friends and others on the site to challenge you to keep going. We're leveraging postive peer presure to keep you in the game.</p>
         </div>
         <div class="col-md-5">
           <%= image_tag "small-home1.jpg", alt: "Generic Image", class: "featurette-image img-responsive" %>
@@ -96,8 +96,8 @@
           <%= image_tag "small-home2.jpg", alt: "Generic Image", class: "featurette-image img-responsive" %>
         </div>
         <div class="col-md-7">
-          <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">Challenge Yourself.</span></h2>
+          <p class="lead">Challenge yourself to reach your fitness goals. If competing against others isn't your thing then just compete against yourself in personal challenges. Choose one of the pre-defined challenges or create your own and see your progress over time. Need additional motivation, make your challenge public and see how others compare.</p>
         </div>
       </div>
 
@@ -105,8 +105,8 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">Acheive your goals. <span class="text-muted">Your Way.</span></h2>
+          <p class="lead">Whatever your goals, whatever your motivational needs, we've got you covered. Get started and start seeing the results. Your body with thank you. </p>
         </div>
         <div class="col-md-5">
           <%= image_tag "small-home3.jpg", alt: "Generic Image", class: "featurette-image img-responsive" %>
